# mach

./: .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  API_DOCS_SUMMARY.md  BENCHMARKS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  discord_announcement.md  docker-compose.yml  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/actions/setup-cuda-python-env/: action.yml
.github/actions/setup-flox/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: check.yml  docker-build.yml  docs.yml  test_cpu.yml  test_gpu.yml  wheels.yml
docs/: .gitignore  Makefile  api.rst  benchmarks.rst  conf.py  index.rst
docs/_templates/autosummary/: module.rst
examples/: README.rst  doppler.py  plane_wave_compound.py
examples/marimo/: README.md  plane_wave_compound.py  plane_wave_compound_marimo.py
marimo/: README.md  doppler.py  plane_wave_compound.py
src/mach/: __init__.py  _array_api.py  _check.py  _cuda_impl.pyi  _vis.py  experimental.py  geometry.py  kernel.cu  kernel.py  wavefront.py
src/mach/io/: uff.py  utils.py
tests/: conftest.py  plot_benchmark.py  plot_scaling.py  test_geometry.py  test_nanobind.py  test_wavefront.py
tests/compare/: conftest.py  test_performance_scaling.py  test_pymust.py  test_vbeam.py
tests/io/: test_must.py  test_uff.py
tests/private_api/: test_array_api.py  test_check.py
